2014-09-04 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/cinc2h.pl,
	  Updated unto the Perl 5.16 version.

2014-09-03 Ben Shi <powerstudio1st AT 163.com>
	* sdas/asstm8/stm8mch.c:
	  Fix the wrong code of the bit index in BTJF / BTJF.

2014-09-01 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/include/pic14/pic14devices.txt: Minor bugfix.

2014-08-30 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-pr28982a.c:
	* support/regression/tests/bug3475630.c:
	  Enabled on the stm8 port.

2014-08-29 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-pr47337.c:
	  Enable this test case on the stm8 port.

2014-08-20 Ben Shi <powerstudio1st AT 163.com>
	* device/lib/stm8/setjmp.s:
	  Substitute _CODE to CODE to conform with stm8's code generator.
	* sdas/linksrc/lkmain.c:
	  Revert to reversion 9059.

2014-08-18 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/setjmp.c:
	  Enabled for the stm8 port.
	* sdas/linksrc/lkmain.c:
	  Avoid generating invalid instructions on MacOS.

2014-08-17 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/setjmp.c:
	  Disabled for the stm8 port.

2014-08-16 Ben Shi <powerstudio1st AT 163.com>
	* all.vcxproj:
	* support/scripts/sdcc.nsi:
	  Create a new sdldstm8 on Windows.
	* sdas/linksrc/Makefile.in:
	* Makefile.in:
	  Create a spereated sdldstm8 on Unix like.
	* src/stm8/main.c:
	* sdas/linksrc/sdld.c:
	* sdas/linksrc/sdld.h:
	  Let the stm8 port use sdldstm8 instead of sdld.

2014-08-12 Ben Shi <powerstudio1st AT 163.com>
	* sdcc/support/regression/tests/bug-2205.c:
	* sdcc/support/regression/tests/bug-971834.c:
	* sdcc/support/regression/tests/key.c:
	  Make Small changes to fit LLVM/CLANG for host test.

2014-08-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (pushSide, genPcall): fixed bug with pointer
	  function call overwriting register parameter with function