@@ -2,7 +2,7 @@
 
 =back
 
-  Copyright (C) 2013-2014, Molnar Karoly <molnarkaroly@users.sf.net>
+  Copyright (C) 2013, Molnar Karoly <molnarkaroly@users.sf.net>
 
     This software is provided 'as-is', without any express or implied
     warranty.  In no event will the authors be held liable for any damages
@@ -42,6 +42,7 @@
 
 use strict;
 use warnings;
+no if $] >= 5.018, warnings => "experimental::smartmatch";        # perl 5.16
 use 5.12.0;                     # when (regex)
 
 use constant FALSE	=> 0;
@@ -394,7 +395,7 @@ sub _defined($)
 
 sub define($)
   {
-  my ($Name) = ($_[0] =~ /^(\S+)/o);
+  my ($Name) = ($_[0] =~ /^(\S+)/op);
   my $Body = ${^POSTMATCH};
 
   $Body =~ s/^\s+//o;
@@ -5667,7 +5668,7 @@ sub print_label($)
 
   if ($type == BL_TYPE_SUB)
     {
-    print "\n;$border0\n" 
+    print "\n;$border0\n";
     }
   elsif ($type == BL_TYPE_JLABEL)
     {
